<resources>
    <string name="app_name">My ZOE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">My ZOE</string>
    <string name="nav_header_subtitle">A community app for your ZOE</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Status</string>
    <string name="menu_location">Location</string>
    <string name="menu_slideshow">Charge Schedule</string>
    <string name="menu_login">Login</string>
    <string name="menu_share">Location</string>
    <string name="menu_send">Cockpit</string>
    <string name="odometer_label">Odometer</string>
    <string name="battery_level_label">Battery level</string>
    <string name="unknown_value">unknown</string>
    <string name="title_cockpit_information">Cockpit Information</string>
    <string name="login_label_country">Country</string>
    <string name="login_value_country" translatable="false">de_DE</string>
    <string name="login_label_username">Username</string>
    <string name="login_label_password">Password</string>
    <string name="login_label_status">Status</string>
    <string name="login_label_gigya_expires">Gigya expires</string>
    <string name="login_value_status_ok">Ok</string>
    <string name="login_value_status_error">Error</string>
    <string name="login_value_status_missing">Missing</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_refresh">Refresh</string>
    <string name="login_label_title">Provide your login information</string>
    <string name="login_status_ok_api_token">API tokens received</string>
    <string name="login_status_err_api_token">Error receiving API tokens</string>
    <string name="login_status_ok_gigya_session">Session cookie received</string>
    <string name="login_status_err_gigya_session">Error receiving session cookie</string>
    <string name="login_status_ok_gigya_person">Person ID received</string>
    <string name="login_status_err_gigya_person">Error retrieving person ID</string>
    <string name="login_status_ok_gigya_jwt">JWT received</string>
    <string name="login_status_err_gigya_jwt">Error retrieving JWT</string>
    <string name="login_status_empty">Empty</string>
    <string name="login_label_kamereon_expires">Kamereon expires</string>
    <string name="login_status_ok_kamereon_person">Kamereon accounts available</string>
    <string name="login_status_err_kamereon_person">Error obtaining Kamereon accounts</string>
    <string name="login_status_ok_kamereon_jwt">Kamereon JWT available</string>
    <string name="login_status_err_kamereon_jwt">Error obtaining Kamereon JWT</string>
    <string name="login_status_expired_gigya">Gigya JWT expired</string>
    <string name="login_status_expired_kamereon">Kamereon JWT expired</string>
    <string name="title_battery_status">Battery Status</string>
    <string name="battery_plug_label">Plug</string>
    <string name="battery_charge_label">Charge</string>
    <string name="vehicle_picture">Vehicle picture</string>
    <string name="battery_temperature_label">Temperature</string>
    <string name="battery_autonomy_label">Autonomy</string>
    <string name="battery_capacity_label">Capacity</string>
    <string name="battery_energy_label">Energy</string>
    <string name="battery_remaining_time_label">Remaining time</string>
    <string name="action_refresh">Refresh</string>
    <string name="not_implemented_yet">Not implemented yet</string>
    <string name="login_save_credentials">Save credentials</string>
    <string name="action_about">About</string>
    <string name="label_clipboard_content" translatable="false">MyZOE</string>
    <string name="toast_copied_to_clipboard">Copied to clipboard</string>
    <string name="label_void">void</string>
    <string name="battery_timestamp_label">Timestamp</string>
    <string name="plug_state_unplugged">Unplugged</string>
    <string name="plug_state_plugged">Plugged</string>
    <string name="plug_state_error">Plug error</string>
    <string name="plug_state_not_available">Not available</string>
    <string name="charge_state_not_in_charge">Not in charge</string>
    <string name="charge_state_waiting_planned">Waiting for planned charge</string>
    <string name="charge_state_charge_ended">Charge ended</string>
    <string name="charge_state_flap_open">Energy flap opened</string>
    <string name="charge_state_in_progress">Charge in progress</string>
    <string name="charge_state_waiting_current">Waiting for current charge</string>
    <string name="charge_state_error">Charge error</string>
    <string name="charge_state_not_available">Not available</string>
    <string name="button_charge">Charge</string>
    <string name="button_aircondition_on">Start</string>
    <string name="button_aircondition_off">Stop</string>
    <string name="toast_aircondition_good">Aircondition command successfully transmitted. cmd:%s - temp:%d°</string>
    <string name="toast_charge_good">Charge command successfully transmitted. cmd:%s</string>
    <string name="pref_category_notifications">Notifications/Thresholds</string>
    <string name="pref_notification_low">Low level</string>
    <string name="pref_notification_medium">Medium level</string>
    <string name="pref_notification_full">Full level</string>
    <string name="pref_notification_switch">Notifications on/off</string>
    <string name="pref_notification_summary">Switches notifications on/off while in charge</string>
    <string name="pref_category_defaults">Defaults</string>
    <string name="pref_default_temperature">Target temperature</string>
    <string name="error_alert_title">Error message</string>
    <string name="error_alert_line_status">Status : %d</string>
    <string name="error_alert_line_error">Error : %s</string>
    <string name="error_alert_line_path">Path : %s</string>
    <string name="error_alert_line_timestamp">Timestamp : %s</string>
    <string name="error_alert_line_message">Message : %s</string>
    <string name="error_alert_unknown">Unknown error</string>
    <string name="pref_cmd_cockpit">Retrieve cockpit</string>
</resources>
