<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:scrollbars="none">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/login_lable_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/login_label_title"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="454dp"
            android:orientation="vertical"
            android:padding="@dimen/fab_margin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/login_lable_title"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/security_country_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@id/login_value_country"
                android:paddingBottom="2dp"
                android:text="@string/login_label_country" />

            <EditText
                android:id="@+id/login_value_country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:inputType="textNoSuggestions"
                android:paddingBottom="10dp"
                android:text="@string/login_value_country" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/login_label_username" />

            <EditText
                android:id="@+id/login_value_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/login_label_username"
                android:inputType="textEmailAddress"
                android:paddingBottom="10dp" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/login_label_password" />

            <EditText
                android:id="@+id/login_value_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/login_label_password"
                android:inputType="textPassword"
                android:paddingBottom="10dp" />

            <Switch
                android:id="@+id/login_save_credentials"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_save_credentials" />

            <Button
                android:id="@+id/login_button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:text="@string/login_button_login" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:paddingBottom="2dp"
                android:text="@string/login_label_status" />

            <TextView
                android:id="@+id/login_value_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="6"
                android:paddingBottom="10dp"
                android:scrollbars="vertical"
                android:text="@string/login_value_status_missing" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/login_label_gigya_expires" />

            <TextView
                android:id="@+id/login_value_gigya_expires"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="2dp"
                android:text="@string/login_label_kamereon_expires" />

            <TextView
                android:id="@+id/login_value_kamereon_expires"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lines="2" />

            <Button
                android:id="@+id/login_button_refresh"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_button_refresh" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>