<?xml version="1.0" encoding="utf-8"?>

<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:scrollbars="none">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableLayout
                android:id="@+id/tableLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <Spinner
                        android:id="@+id/fin_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="1"
                        android:layout_gravity="center"
                        android:layout_span="2"
                        android:layout_weight="1"
                        android:background="@android:drawable/btn_dropdown"
                        android:dropDownWidth="wrap_content"
                        android:spinnerMode="dropdown" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title_cockpit_information"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/home_title_margin"
                        android:layout_marginTop="@dimen/home_title_margin"
                        android:layout_marginEnd="@dimen/home_title_margin"
                        android:layout_span="2"
                        android:layout_weight="1"
                        android:text="@string/title_cockpit_information"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/odometer_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginStart="@dimen/home_text_margin_start"
                        android:layout_marginTop="@dimen/home_text_margin"
                        android:layout_marginBottom="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/odometer_label" />

                    <TextView
                        android:id="@+id/odometer_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_margin="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/unknown_value" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/title_battery_status"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="@dimen/home_title_margin"
                        android:layout_marginTop="@dimen/home_title_margin"
                        android:layout_marginEnd="@dimen/home_title_margin"
                        android:layout_span="2"
                        android:layout_weight="1"
                        android:text="@string/title_battery_status"
                        android:textAlignment="center"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </TableRow>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <ImageView
                        android:id="@+id/vehicleImage"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:layout_gravity="top|start"
                        android:contentDescription="@string/vehicle_picture"
                        app:srcCompat="@drawable/zoe_dummy" />

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|start">

                        <ProgressBar
                            android:id="@+id/battery_progress_bar"
                            style="?android:attr/progressBarStyleHorizontal"
                            android:layout_width="fill_parent"
                            android:layout_height="25dp"
                            android:layout_gravity="bottom|start"
                            android:layout_marginStart="20dp"
                            android:layout_marginEnd="20dp"
                            android:max="100"
                            android:progress="100"
                            android:progressDrawable="@drawable/gradient_progress" />

                        <TextView
                            android:id="@+id/battery_level_value"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="bottom|center_horizontal"
                            android:layout_marginBottom="5dp"
                            android:fontFamily="monospace"
                            android:text="@string/unknown_value"
                            android:textStyle="bold" />

                    </FrameLayout>
                </FrameLayout>

                <TableRow
                    android:id="@+id/battery_timestamp_row"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/battery_timestamp_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginStart="@dimen/home_text_margin_start"
                        android:layout_marginTop="@dimen/home_text_margin"
                        android:layout_marginBottom="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/battery_timestamp_label" />

                    <TextView
                        android:id="@+id/battery_timestamp_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_margin="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/unknown_value" />

                </TableRow>


                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent"
                    tools:layout_editor_absoluteX="1dp"
                    tools:layout_editor_absoluteY="228dp">

                    <TextView
                        android:id="@+id/battery_plug_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginStart="@dimen/home_text_margin_start"
                        android:layout_marginTop="@dimen/home_text_margin"
                        android:layout_marginBottom="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/battery_plug_label" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Switch
                            android:id="@+id/battery_plug_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_margin="@dimen/home_text_margin"
                            android:layout_weight="1" />
                    </LinearLayout>

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/battery_charge_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginStart="@dimen/home_text_margin_start"
                        android:layout_marginTop="@dimen/home_text_margin"
                        android:layout_marginBottom="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/battery_charge_label" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_column="2"
                        android:layout_weight="1"
                        android:orientation="vertical">

                        <Switch
                            android:id="@+id/battery_charge_switch"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_margin="@dimen/home_text_margin"
                            android:layout_weight="1" />

                    </LinearLayout>
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/battery_temperature_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginStart="@dimen/home_text_margin_start"
                        android:layout_marginTop="@dimen/home_text_margin"
                        android:layout_marginBottom="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/battery_temperature_label" />

                    <TextView
                        android:id="@+id/battery_temperature_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_margin="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/unknown_value" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/battery_autonomy_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginStart="@dimen/home_text_margin_start"
                        android:layout_marginTop="@dimen/home_text_margin"
                        android:layout_marginBottom="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/battery_autonomy_label" />

                    <TextView
                        android:id="@+id/battery_autonomy_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_margin="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/unknown_value" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/battery_capacity_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginStart="@dimen/home_text_margin_start"
                        android:layout_marginTop="@dimen/home_text_margin"
                        android:layout_marginBottom="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/battery_capacity_label" />

                    <TextView
                        android:id="@+id/battery_capacity_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_margin="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/unknown_value" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/battery_energy_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginStart="@dimen/home_text_margin_start"
                        android:layout_marginTop="@dimen/home_text_margin"
                        android:layout_marginBottom="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/battery_energy_label" />

                    <TextView
                        android:id="@+id/battery_energy_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_margin="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/unknown_value" />
                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/battery_remaining_time_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_marginStart="@dimen/home_text_margin_start"
                        android:layout_marginTop="@dimen/home_text_margin"
                        android:layout_marginBottom="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/battery_remaining_time_label" />

                    <TextView
                        android:id="@+id/battery_remaining_time_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="2"
                        android:layout_margin="@dimen/home_text_margin"
                        android:layout_weight="1"
                        android:text="@string/unknown_value" />
                </TableRow>

            </TableLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
